RESOLVED FIXED265074
[IFC] Cached maximum inline content should be able to handle trailing line break
https://bugs.webkit.org/show_bug.cgi?id=265074
Summary [IFC] Cached maximum inline content should be able to handle trailing line break
alan
Reported 2023-11-17 19:45:33 PST
ssia
Attachments
Patch (2.66 KB, patch)
2023-11-17 19:48 PST, alan
ews-feeder: commit-queue-
[fast-cq]Patch (5.09 KB, patch)
2023-11-18 07:41 PST, alan
no flags
alan
Comment 1 2023-11-17 19:48:03 PST
alan
Comment 2 2023-11-18 07:41:14 PST
Created attachment 468662 [details] [fast-cq]Patch
EWS
Comment 3 2023-11-18 09:22:44 PST
Committed 270942@main (9d772d9e5412): <https://commits.webkit.org/270942@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 468662 [details].
Radar WebKit Bug Importer
Comment 4 2023-11-18 09:23:14 PST
Note You need to log in before you can comment on or make changes to this bug.