[IFC] Cached maximum inline content should be able to handle trailing line break https://bugs.webkit.org/show_bug.cgi?id=265074

Reviewed by Antti Koivisto.

Restore trimmed trailing whitespace when followed by hard line break (<br>).

* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::createDisplayContentForLineFromCachedContent):

Canonical link: https://commits.webkit.org/270942@main